--- a/public/qr-scanner.html
+++ b/public/qr-scanner.html
@@ -452,8 +452,11 @@
       let qrScanner = null;
       let isScanning = false;
 
-      // API Base URL
-      const API_BASE = "http://localhost:3300/api/v1";
+      // API Base URL - Auto-detect based on current domain
+      const API_BASE = window.location.origin + "/api/v1";
+      
+      // Log the detected API base for debugging
+      console.log("QR Scanner initialized with API_BASE:", API_BASE);
 
       // Login as pharmacist
       async function loginPharmacist() {
